opam-version: "2.0"
version: "3.0.0"
synopsis: "Reparse lwt-unix support"
description: "char Lwt_stream.t parsing support for 'reparse'"
maintainer: ["Bikal Lem"]
authors: ["Bikal Lem <gbikal@gmail.com>"]
license: "MPL-2.0"
homepage: "https://github.com/lemaetech/reparse"
bug-reports: "https://github.com/lemaetech/reparse/issues"
depends: [
  "dune" {>= "2.8"}
  "ocaml" {>= "4.10.0"}
  "lwt" {>= "5.4.1"}
  "reparse" {>= "3.0.0"}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/lemaetech/reparse.git"
