opam-version: "2.0"
version: "2.0.0"
synopsis: "Recursive descent parsing library for ocaml"
description:
  "Monadic, recursive descent based, parser construction library for ocaml. Comprehensively documented and tested."
maintainer: ["Bikal Lem"]
authors: ["Bikal Lem <gbikal@gmail.com>"]
license: "MPL-2.0"
homepage: "https://github.com/lemaetech/reparse"
bug-reports: "https://github.com/lemaetech/reparse/issues"
depends: [
  "dune" {>= "2.7"}
  "ocaml" {>= "4.10.0"}
  "alcotest" {with-test}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/lemaetech/reparse.git"
